--- a/app/Resources/views/default/politica_privacidade.html.twig
+++ b/app/Resources/views/default/politica_privacidade.html.twig
@@ -1,5 +1,116 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    aew
+    <div class="row">
+    <div class ="titles-box" >
+      <h1 class = "titles-top">Política</h1>
+      <h3 class = "titles-bottom">de Privacidade</h3>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+        <div class="col s12">
+          <div class="card-panel">
+            <div class="card-content">
+                <p> A BidTravel.com.br garante a privacidade e a segurança de seus usuários durante toda a navegação do site. Os dados cadastrados são armazenados em nosso banco de dados com o objetivo de melhorar o nosso relacionamento por meio de e-mail, mala direta e outras formas de interação. Para isso utilizamos cookies e informações de sua navegação (sessão do browser) com o intuito de conhecer o público e aperfeiçoar sempre nossos produtos e serviços, garantindo as melhores promoções e ofertas para você. Durante todo o processo, suas informações são mantidas em sigilo absoluto. 
+                </p>
+                <p>A BidTravel.com.br atua com as mais modernas práticas relativas a meios de pagamento e possui parceiros líderes nestes segmentos. O número e demais dados de seu cartão de crédito não são armazenados em nosso banco de dados nem durante, nem após a conclusão da compra. 
+                </p>
+                <p>Para sua segurança, não aconselhamos a divulgação de sua senha na BidTravel.com.br a terceiros.</p>
+                <p>Boas Compras e boa diversão!!! \o/\o/\o/ </p>
+                <p>Esperamos que você tenha uma excelente experiência na BidTravel.com.br.<p>
+                <p>Equipe BidTravel</p>
+                <ol>
+                  <li id="ancor-1">
+                    <h6 class ="lime-text text-darken-4">INTRODUÇÃO</h6>
+                    <p>  
+                    Todas as referências a 'nossa', 'nós' ou 'companhia' nesta política e dentro dos avisos de opt-in são consideradas como referentes à BidTravel.com.br.</p>
+                    <p>Nós nos esforçamos para proteger a sua privacidade. Nós fornecemos esta Declaração de Privacidade para ajudá-lo a entender o que podemos fazer com qualquer informação pessoal que venhamos a obter de você. Ao nos fornecer suas informações pessoais, você declara que aceita nossa Declaração de Privacidade e que concorda que podemos coletar, usar e divulgar suas informações pessoais conforme descrito nesta Declaração de Privacidade. Se você não concorda com esta declaração, por favor não nos forneça suas informações pessoais. Esta Declaração de Privacidade é incorporada aos Termos e Condições que regem o uso deste site em geral e deles faz parte. Nós utilizaremos suas informações apenas para os propósitos especificados abaixo. 
+                    Nós podemos atualizar esta Declaração de Privacidade de tempos em tempos. Sugerimos que você verifique esta página regularmente para ter certeza de ter lido a versão mais recente. 
+                    Alterações à Declaração de Privacidade são anotadas aqui: Data da última revisão: 16.06.2016 </p>
+                  </li>
+                  <li id="ancor-2">
+                    <h6 class ="lime-text text-darken-4"> IDADE LEGAL PARA A COMPRA </h6>
+                    <p>Você não deve nos fornecer suas informações pessoais se você não tem idade legal para compra de lances e passagens aéreas. Não temos a intenção de coletar informações pessoais de qualquer indivíduo abaixo da idade legal para a prática de atos de comércio. Se formos avisados ou acreditarmos que alguém abaixo da referida idade legal nos forneceu informações pessoais, envidaremos todos os esforços razoáveis para remover tais informações pessoais de nossos arquivos, ou para marcar tais informações pessoais e armazená-las com o único propósito de garantir que não serão mais utilizadas. </p>
+                  </li>
+
+                  <li id="ancor-3">
+                    <h6 class ="lime-text text-darken-4">O QUE É INFORMAÇÃO PESSOAL?</h6>
+                    <p>Informação pessoal é informação quer permite identificar um indivíduo, conforme definido pela legislação aplicável. Não inclui informações agregadas que não são suficientes para identificá-lo pessoalmente</p> 
+                  </li>
+                  <li id="ancor-4">
+                    <h6 class ="lime-text text-darken-4"> COLETAR INFORMAÇÃO PESSOAL</h6>
+                    <p>Com exceção das informações obrigatórias para o cadastro no site, você pode decidir quais informações pessoais vai nos fornecer. Apenas coletaremos informações pessoais que você decidir fornecer. Sempre que possível, permitiremos que você determine como vamos usar essa informação (por exemplo, fazendo opt–in ou opt-out para receber ofertas promocionais especiais).</p> 
+                    <p>Você pode decidir nos fornecer suas informações pessoais se, por exemplo, você: (I) nos contatar com uma dúvida; (II) cadastrar-se no site; (III) preencher uma pesquisa ou outro formulário que inclua sua informação pessoal; (IV) pedir que nós lhe forneçamos informação; (V) participar de um concurso; (VI) publicar informação em áreas públicas do site, ou aproveitar uma promoção. </p>
+                    <p>Você tem a oportunidade de decidir se quer ou não receber comunicações nossas, exceto comunicações que sejam exigidas por lei ou para gerenciar alguma transação requisitada por você, em qualquer lugar onde pedirmos informações sobre você. </p>
+                    <p>Ao nos fornecer sua informação pessoal, você compreende completamente e concorda com a transferência de tais informações pessoais para outros países ou territórios e com a coleta e processamento de tais informações nesses locais. Qualquer transferência e processamento feitas por nós estarão de acordo com esta Declaração de Privacidade. 
+                    </p>
+                  </li>
+                  <li id="ancor-5">
+                    <h6 class ="lime-text text-darken-4"> USO DE COOKIES EM NOSSO SITE </h6>
+                    <p>Como em muitos outros sites, nós utilizamos "cookies" em nosso site para nos ajudar a coletar e armazenar informações sobre visitantes. </p>
+                    <p>Um cookie é um pequeno arquivo de dados que nosso servidor envia para o seu browser quando você visita o site. O uso de cookies nos permite ajudá-lo a usar certos aspectos do nosso site.</p> 
+                    <p>Você pode apagar os cookies a qualquer momento, ou pode configurar seu browser para rejeitar ou desabilitar cookies. </p>
+                    <p>Você pode obter informação sobre como gerenciar cookies no endereço www.aboutcookies.org . </p>
+                    <p>Nós podemos usar a informação nos cookies para os seguintes propósitos: </p>
+                  </li>
+                    <li id="ancor-6">
+                    <h6 class ="lime-text text-darken-4"> MONITORAMENTO DE TRÁFEGO, I.E.:</h6>
+                    <p>- o endereço de IP a partir do qual você acessa o site</p>
+                    <p>- o tipo de navegador e sistema operacional usado para acessar o site</p>
+                    <p>- a data e hora de seu acesso ao site</p>
+                    <p>- as páginas que você visita</p>
+                    <p>- o endereço de IP do site a partir do qual você acessou o site</p>
+                    <p>Para reconhecer visitantes que retornam, para fins estatísticos/analíticos.</p>
+                    <p> a) Para rastreamento anônimo de interação com publicidade online, i.e., para monitorar o número de vezes que um anúncio em banner é mostrado e o número de vezes que ele é clicado.</p>
+                    <p>  b) Nós podemos relacionar a informação coletada através de cookies com outras informações pessoais identificáveis que você nos fornecer. As finalidades são: </p>
+                  <p> c) Para customizar ou personalizar sua experiência no site, por exemplo, de forma que possamos saudá-lo no site usando seu nome.</p>
+                  <p> d) Para fins transacionais, tais como vendas por cartão de crédito.</p>
+                  <p> e) Para monitorar o seu uso do nosso sites para tornar nossas comunicações com você o mais relevantes possíveis; por exemplo, ao enviar-lhe e-mails relevantes às partes do site que você visita com mais freqüência, ou ao avisá-lo sobre características do site que você não acessou anteriormente.</p>
+                  <p>Nós podemos compilar e reportar a terceiros (tais como anunciantes), estatísticas agregadas sobre usuários em termos de números, padrões de tráfego e outras informações relacionadas ao site. </p>
+                  </li>
+                   <li id="ancor-7">
+                    <h6 class ="lime-text text-darken-4"> USO DA INFORMAÇÃO PESSOAL</h6>
+                    <p>Nós podemos usar e/ou divulgar informações pessoais coletadas de você em uma ou mais das seguintes maneiras:</p> 
+                    <p>a) Comunicações de Marketing.</p>
+                    <p>Podemos usar suas informações pessoais para nos comunicar com você sobre nossos leilões. No entanto, você poderá escolher se deseja ou não receber tais comunicações na primeira vez em que nos fornecer informações pessoais. Você também terá a oportunidade de cancelar a assinatura sempre que nos comunicarmos com você. Você também poderá cancelar tais comunicações a qualquer momento. </p>
+                    <p>b) Análise de Marketing </p>
+                    <p>Podemos usar a informação para análise interna de marketing, por exemplo, para avaliar tendências entre nossos usuários ou para medir o volume de tráfego nos nossos sites. Também podemos compartilhar informações não-pessoais com terceiros, como anunciantes, de forma agregada e anônima, o que significa que a informação não conterá qualquer informação de identificação pessoal sobre você. Nós apenas compartilharemos informações pessoais identificáveis com terceiros para realizar análises de marketing se tivermos o seu consentimento.</p> 
+                    <p>c) Fins transacionais.</p>
+                    <p>Nós podemos usar suas informações pessoais para responder a suas consultas e requisições, e para gerenciar transações tais como pagamentos de cartão de crédito para qualquer bem que você comprar de nós ou de algum de nossos parceiros, ou ainda para realizar a entrega para essas transações. As informações pessoais que você nos fornecer podem ser usadas por um parceiro ou revendedor autorizado para realizar a transação. </p>
+                    <p>d) Ofertas de terceiros.</p>
+                    <p>Podemos providenciar que organizações cuidadosamente selecionadas lhe enviem informações promocionais e de marketing que podem ser do seu interesse. Em tais circunstâncias suas informações pessoais podem ser reveladas a essas organizações que estarão obrigadas por obrigações de confidencialidade e restrições sobre o uso de informações pessoais. </p>
+                    <p>e) Venda ou Transferência.</p>
+                    <p>No caso de uma venda, fusão, consolidação, mudança de controle, transferência substancial de patrimônio, financiamento, reorganização ou liquidação, nós poderemos transferir, vender ou designar a terceiros as informações sobre o seu relacionamento conosco, incluindo sem limitação informações de identificação pessoal que você nos fornecer e outras informações sobre o seu relacionamento conosco. </p>
+                    <p>Poderemos coletar, usar e/ou divulgar seus dados pessoais caso seja permitido ou exigido por lei, em razão de determinação judicial, administrativa ou de qualquer órgão governamental, ou caso acreditemos que tal ação é necessária para detectar, proteger, nos defender e/ou a terceiros contra erro, negligência, quebra de contrato, roubo, fraude e outras atividades ilegais ou criminais e, ainda, para seguir as nossas exigências de auditoria ou segurança, e para auditar a conformidade com políticas e obrigações legais ou contratuais. </p>
+                  </li>
+                  <li id="ancor-8">
+                    <h6 class ="lime-text text-darken-4">  DIVULGAÇÃO DE INFORMAÇÕES PESSOAIS </h6>
+                <p>Além das revelações identificadas nos propósitos acima, de tempos em tempos podemos revelar informações pessoais para: </p>
+                  <p> • nossos provedores de serviços e subcontratados, incluindo nossos parceiros, contratados para realizar funções em nosso nome ou fornecer-nos serviços, tais como armazenamento e entregas; marketing e propaganda; processamento de dados; desenvolvimento de software; hospedagem e gerenciamento de sites na Web; serviços de escritório e de tecnologia de informação; jurídico, contabilidade, auditoria e outros provedores de serviços profissionais; e desde que estes provedores de serviços não coletem, usem ou revelem as informações pessoais para qualquer propósito que não seja o de realizar as funções ou fornecer os serviços conforme exigido por lei.</p>
+                  <p>• uma pessoa ou entidade, incluindo nossos parceiros, a quem seja necessário revelar informação para executar uma ou mais das finalidades descritas acima;</p>
+                  <p>• uma pessoa que, na nossa avaliação razoável, esteja fornecendo ou requisitando a informação como representante legal ou agente designado do indivíduo em questão. </p>
+                <p>Ao aceitar os Termos e Condições de uso do site, que incluem esta Declaração de Privacidade, você concede permissão para usar e divulgar suas informações pessoais para os propósitos especificados acima. </p>
+                </li>
+                <li id="ancor-9">
+                  <h6 class ="lime-text text-darken-4"> SEGURANÇA </h6>
+                  <p> Nós levamos a segurança a sério e tomamos precauções para manter as suas informações pessoais seguras. Nós estabelecemos processos físicos, eletrônicos e gerenciais apropriados para garantir a segurança da informação que coletamos. Nós não temos controle sobre a privacidade de quaisquer comunicações de e-mail que estejam em trânsito até nós. Recomendamos que você não inclua informações confidenciais, proprietárias ou sensíveis nos seus e-mails. </p>
+                  <p>No evento improvável de acreditarmos que a segurança de suas informações pessoais que estão sob nossa tutela ou controle foi comprometida, podemos tentar avisá-lo do ocorrido. Se uma notificação for apropriada, tentaremos fazê-la o mais rápido possível sob as circunstâncias e, na medida em que possuímos o seu endereço de e-mail, poderemos notificá-lo por e-mail. </p>
+                </li>
+                <li id="ancor-10">
+                    <h6 class ="lime-text text-darken-4">  PERMISSÕES DE PORTIFÓLIO </h6>
+                    <p>Podemos ocasionalmente enviar-lhe comunicações sobre cupons promocionais não mencionados no site www.bidtravel.com.br.</p> 
+                    <p>Fornecer uma permissão geral para que nos comuniquemos com você sobre os cupons existentes no site www.bidtravel.com.br não significa que você receberá comunicações sobre todas as ofertas existentes no referido site. Nós somente nos comunicaremos com você sobre aqueles cupons que acreditamos possam ser de seu interesse especial. Quaisquer comunicações desse tipo lhe darão a oportunidade de cancelar todas as comunicações a respeito das ofertas contidas no site. </p>
+                </li>
+                <li id="ancor-11">
+                    <h6 class ="lime-text text-darken-4"> LINKS </h6>
+                    <p>Este site pode conter links ou referências a outros sites que estão fora do nosso controle. Por favor, esteja ciente de que não temos controle sobre esses sites e que a nossa Declaração de Privacidade não se aplica a esses sites. Nós o encorajamos a ler as declarações de privacidade e termos e condições de sites relacionados ou mencionados nos quais você entrar. </p>
+                    <p>Nada nesta Declaração de Privacidade, ou em outro local, criará ou complementará qualquer direito ou reivindicação (seja ele legal, correto ou de outra forma) que qualquer indivíduo ou pessoa possa ter, amparado ou não na lei, contra a companhia ou contra qualquer terceira parte ou contra quaisquer de seus respectivos diretores, oficiais, funcionários, agentes ou representantes; tampouco irá a existência desta Declaração de Privacidade ou a sua execução impor ou complementar alguma obrigação ou responsabilidade à BidTravel.com.br que ela já não possua perante a lei. </p>
+                  </li> 
+                                  
+              </div>
+            </div>
+        </div>
+    </div>
+  </div> 
 {% endblock %}
