--- a/app/Resources/views/default/social.html.twig
+++ b/app/Resources/views/default/social.html.twig
@@ -1,5 +1,23 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    aew
+   <div class="container">
+    <div class="row">
+      <div class ="titles-box center" >
+        <h1 class = "titles-top">Social</h1>
+        <h3 class = "titles-bottom"></h3>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col s12">
+          <div class="card-panel">
+            <div class="card-content">
+                <div class="row margin">
+                  <p>Aguardando Conteudo...</p>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+  </div> 
 {% endblock %}
