--- a/app/Resources/views/default/contato.html.twig
+++ b/app/Resources/views/default/contato.html.twig
@@ -1,5 +1,113 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    aew
+     <div class="container">
+  <br>
+    <!-- ##### Title ##### -->
+  <div class="row">
+    <div class ="titles-box" >
+      <h3>Alguma Dúvida, Sugestão ou Crítica?</h3>
+      <h5>Preencha o formulário abaixo e fale.</h5>
+    </div>
+  </div>
+    <div class="row">
+        <div class="col s12">
+          <div class="card-panel">
+            <div class="card-content">
+                <div class="container">
+                    <div class="row">
+                        <div class="col m10 offset-m1 s12">
+                            <div class="row">
+                                <form class="col s12">
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input id="first_name" type="text" class="validate">
+                                            <label for="first_name">Nome</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input id="email" type="email" class="validate" required>
+                                            <label for="email">E-mail</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                          <label for="budget">Assunto</label>
+                                          <br/>
+                                        </div>
+                                        <div class="input-field col s12">
+                                            <select multiple>
+                                              <option value="" selected disabled>Selecione...</option>
+                                              <option value="1">Dúvida</option>
+                                              <option value="2">Sugestão</option>
+                                               <option value="3">Crítica</option>
+                                              <option value="4">Elogio</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                          <textarea id="message" class="materialize-textarea"></textarea>
+                                          <label for="message">Message</label>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                          <label>Como você nos encontrou?</label>
+                                          <br/>
+                                        </div>
+                                        <div class="input-field col m3 s6 center-align">
+                                          <input name="group1" type="radio" id="google" />
+                                          <label for="google">Google</label>
+                                        </div>
+                                        <div class="input-field col m3 s6 center-align">
+                                          <input name="group1" type="radio" id="customer" />
+                                          <label for="customer">Cliente</label>
+                                        </div>
+                                        <div class="input-field col m3 s6 center-align">
+                                          <input name="group1" type="radio" id="store" />
+                                          <label for="store">Anúncio</label>
+                                        </div>
+                                        <div class="input-field col m3 s6 center-align">
+                                          <input name="group1" type="radio" id="other" />
+                                          <label for="other">Outro</label>
+                                        </div>
+                                    </div>
+                                    <div class="divider"></div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                          <label>Como gostaria de receber as informações?</label>
+                                          <br/>
+                                        </div>
+                                        <div class="input-field col m4 s12 center-align">
+                                          <input name="group2" type="checkbox" id="emailComm" />
+                                          <label for="emailComm">E-mail</label>
+                                        </div>
+                                        <div class="input-field col m4 s12 center-align">
+                                          <input name="group2" type="checkbox" id="callComm" />
+                                          <label for="callComm">Telefone</label>
+                                        </div>
+                                        <div class="input-field col m4 s12 center-align">
+                                          <input name="group2" type="checkbox" id="newsletter" />
+                                          <label for="newsletter">Newsletter</label>
+                                        </div>
+                                    </div>
+                                    <div class="divider"></div>
+                                    <div class="row">
+                                        <div class="col m12">
+                                         <p class="right-align"><button class="btn waves-effect waves-light green darken-3" type="button" name="action">Enviar</button></p>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+  </div> 
 {% endblock %}
