--- a/app/Resources/views/default/cupons.html.twig
+++ b/app/Resources/views/default/cupons.html.twig
@@ -1,5 +1,234 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    aew
+    <!-- ##### Leilão ##### -->
+
+<div class="container">
+<!-- ##### Title ##### -->
+  <div class="row">
+    <div class ="titles-box" >
+      <h1 class = "titles-top">Cupons</h1>
+      <h3 class = "titles-bottom"></h3>
+    </div>
+  </div>
+
+<!-- ##### Slider Topo ##### -->
+  <div class="slider">
+    <ul class="slides">
+
+      <li>
+      <img src="img/hotel-01.jpg" alt="Mon Port Hotel & Spa"> <!-- random image -->
+        <div class="caption center-align">
+            <div class="col s12 m6">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-action">
+                    <a class="modal-trigger waves-effect red darken-3 btn" href="#modal1">15% OFF</a>
+                  </div>
+                  <span class="card-title">Mon Port Hotel & Spa</span>
+                  <p> Cala d'Egos, Finca La Noria, 07157 Port d'Andratx - Majorca, Spain</p>
+                </div>
+                
+              </div>
+            </div>
+        </div>
+      </li>
+
+      <li>
+        <img src="img/hotel-02.jpg" alt="Austin"> <!-- random image -->
+        <div class="caption center-align">
+            <div class="col s12 m6">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-action">
+                    <a class="modal-trigger waves-effect red darken-3 btn btn-caption-d" href="#modal1">15% Monono momo</a>
+                  </div>
+                  <span class="card-title">AUSTIN ROOFTOP POOL</span>
+                  <p>700 SAN JACINTO AT 8TH STREET - AUSTIN, TEXAS 78701</p>
+                </div>
+                
+              </div>
+            </div>
+        </div>
+      </li>
+
+      <li>
+        <img src="img/hotel-04.jpg" alt="Marina Bay"> <!-- random image -->
+        <div class="caption center-align">
+            <div class="col s12 m6">
+              <div class="card">
+                <div class="card-action">
+                  <a class="modal-trigger waves-effect red darken-3 btn btn-caption-d" href="#modal1">15% Monono momo</a>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Marina Bay Sands Hotel</span>
+                  <p>10 Bayfront Avenue - Singapore 018956</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+</div>
+ <!-- ##### Slider Topo ##### -->
+
+
+<!-- ##### Modal Slider ##### -->
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <h4>Detalhes</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nulla, mollitia maiores consectetur asperiores, obcaecati quaerat. Eum iste eos cum minus voluptatem repudiandae. Mollitia, et officiis neque porro rem distinctio.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Fechar</a>
+    </div>
+  </div>
+
+<!-- ##### Modal Slider ##### -->
+
+<!-- ##### Campos de busca  ##### -->
+ <div class="container white">
+  <div class="row">
+    <div class="input-field col l9 m9 s7">
+      <i class="material-icons prefix">search</i>
+      <input type="text" id="autocomplete">
+      <label for="autocomplete">Pesquisar por hotel ou cidade no site</label>
+    </div>   
+    <div class="input-field col l3 m2 s4">
+      <a href="#!" class="btn btn-large waves-effect waves-light green darken-3">Buscar</a>
+    </div>    
+  </div>
+ </div>
+</div>
+
+<!-- ##### Campos de busca ##### -->
+
+<div class="container">
+    <div class="row center">
+      <div class="col l3 m6 s12">
+        <div class="card">    
+          <div class="card-image waves-effect waves-block waves-light">
+            <div class="grid-example col s12 red"><span class="white-text">10% Desconto</span></div>
+            <img class="activator" src="img/hotel-01.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">MONMO<i class="material-icons right">more_vert</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
+            <span class ="yellow-text accent-4">
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">MONMO<i class="material-icons right">close</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col l3 m6 s12">
+        <div class="card">    
+          <div class="card-image waves-effect waves-block waves-light">
+            <div class="grid-example col s12 red"><span class="white-text">10% Desconto</span></div>
+            <img class="activator" src="img/hotel-01.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">MONMO<i class="material-icons right">more_vert</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
+            <span class ="yellow-text accent-4">
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">MONMO<i class="material-icons right">close</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col l3 m6 s12">
+        <div class="card">    
+          <div class="card-image waves-effect waves-block waves-light">
+            <div class="grid-example col s12 red"><span class="white-text">10% Desconto</span></div>
+            <img class="activator" src="img/hotel-02.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">MONMO<i class="material-icons right">more_vert</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
+            <span class ="yellow-text accent-4">
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons yellow-text">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">MONMO<i class="material-icons right">close</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col l3 m6 s12">
+        <div class="card">    
+          <div class="card-image waves-effect waves-block waves-light">
+            <div class="grid-example col s12 red"><span class="white-text">10% Desconto</span></div>
+            <img class="activator" src="img/hotel-02.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">MONMO<i class="material-icons right">more_vert</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
+            <span class ="yellow-text accent-4">
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+              <i class="material-icons">grade</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">MONMO<i class="material-icons right">close</i></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 {% endblock %}
