--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -120,12 +120,12 @@
             <div class="col l2 s12 m3 footer-mobile">
                 <span class="white-text"><b>A EMPRESA</b></span>
                 <ul>
-                    <li><a class="white-text" href="terms.html">Termos de uso</a></li>
-                    <li><a class="white-text" href="whoweare.html">Quem somos</a></li>
-                    <li><a class="white-text" href="privacy.html">Privacidade</a></li>
-                    <li><a class="white-text" href="works.html">Como funciona</a></li>
-                    <li><a class="white-text" href="doubts.html">Dúvidas</a></li>
-                    <li><a class="white-text" href="contact.html">Fale conosco</a></li>
+                    <li><a class="white-text" href="{{ url('AppBundleTermosCondicoes') }}">Termos de uso</a></li>
+                    <li><a class="white-text" href="{{ url('AppBundleContato') }}">Quem somos</a></li>
+                    <li><a class="white-text" href="{{ url('AppBundlePoliticaPrivacidade') }}">Privacidade</a></li>
+                    <li><a class="white-text" href="{{ url('AppBundleComoFunciona') }}">Como funciona</a></li>
+                    <li><a class="white-text" href="{{ url('AppBundleDuvidas') }}">Dúvidas</a></li>
+                    <li><a class="white-text" href="{{ url('AppBundleContato') }}">Fale conosco</a></li>
                 </ul>
             </div>
 
