--- a/app/Resources/views/default/como_funciona.html.twig
+++ b/app/Resources/views/default/como_funciona.html.twig
@@ -98,7 +98,7 @@
         <div class="row grey lighten-4">
             <div class="col s3">
                 <figure>
-                    <img class="responsive-img" src="img/works2.png" alt="">
+                    <img class="responsive-img" src="http://localhost/www/img/works2.png" alt="">
                 </figure>
             </div>
             <div class="col s9">
